[package]
name = "systat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
simple-websockets = "0.1.6"
systemstat = { git = "https://github.com/valpackett/systemstat", version = "0.2.3" }
timer = "0.2.0"
websockets = "0.3.0"
